--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 
   <h2>To Do List</h2>
   <ul id="fav-list">
-    <li class="fav-thing"><span>Go to the gym</span></li>
-    <li class="fav-thing"><span>Pick up groceries</span></li>
-    <li class="fav-thing"><span>Stop by the bank</span></li>
+    <li class="fav-thing"><span>Go to the bank</span></li>
+    <li class="fav-thing"><span>Get groceries</span></li>
+    <li class="fav-thing"><span>Walk dog</span></li>
   </ul>
 
   <form>
     <input id="new-thing" />
-    <input id="new-thing-button" type="submit" value="Add Task"></submit>
+    <input id="new-thing-button" type="submit" value="Create new thing"></submit>
   </form>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
   <script src="js/script.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
